--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Desktopper WallPaper</string>
+    <string name="app_name">WallPapers Desktop</string>
 
     <string name="action_settings">Settings</string>
     <string name="action_about">About</string>
