--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
 
     <string name="FolderName">Wallpaper</string>
     <string name="Select_No_Of_Rows">Select No of rows</string>
+    <string name="interstitial_ad_unit_id">asdkjfhadsfiu</string>
 
 
     <!-- Example settings for Data & Sync -->
